apps/sds-status/inspect-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql
spec:
  containers:
  - name: psql
    image: alpine/psql
