apps/sds-status/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        imagePullPolicy: Always
        image: harbor.yannikmueller.eu/sds-status/backend:testing
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 4000
