apps/sds-status/leitstelle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leitstelle
    annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
spec:
  selector:
    matchLabels:
      app: leitstelle
  template:
    metadata:
      labels:
        app: leitstelle
    spec:
      containers:
      - name: leitstelle
        image: harbor.yannikmueller.eu/sds-status/leitstelle:testing
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: leitstelle-svc
spec:
  selector:
    app: leitstelle
  ports:
  - port: 80
    targetPort: 3000
