apps/sds-status/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sds-ingress
  labels:
    name: sds-ingress
spec:
  rules:
  - host: funk.yannikmueller.eu
    http:
      paths:
      - pathType: Prefix
        path: "/leitstelle"
        backend:
          service:
            name: leitstelle-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sds-tableau-svc
            port: 
              number: 80
